--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --Black: hsl(0, 0%, 0%);
   --Dark-Gray: hsl(0, 0%, 55%);
   --Very-Dark-Gray: hsl(0, 0%, 41%);
-  --overlay: rgb(100, 100, 100, .6);
+  --overlay: rgba(255, 255, 255, .6);
   --Light-Gray: hsl(0, 0%, 90%);
   --Background-color: #ffffff;
   --op-background-color: #121212;
@@ -16,7 +16,7 @@
   --Black: hsl(0, 0%, 0%);
   --Dark-Gray: hsl(0, 0%, 60%);
   --Very-Dark-Gray: hsl(0, 0%, 30%);
-  --overlay: rgb(0, 0, 0, .6);
+  --overlay: rgba(255, 255, 255, .6);
   --Background-color: #121212;
   --op-background-color: #ffffff;
   --text-color: #ffffff;
