changed text color in dark mode

--- a/styles.css
+++ b/styles.css
@@ -427,6 +427,7 @@ footer .socials img:hover {
     background-color: var(--White);
     padding: 70px;
     justify-self: start;
+    color: black;
   }
   main .interactive-section .interactive-description .description-header {
     font-size: 3.5rem;
